Changes made in the create expense and get the expense for the user
